--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Groceries
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,27 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large"></ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> 
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-list>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>Bread</ion-label>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option (click)="remove(item)"><ion-icon name="trash-sharp" size="large"></ion-icon></ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>Milk</ion-label>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option (click)="remove(item)"><ion-icon name="trash-sharp" size="large"></ion-icon></ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+</ion-list>
 </ion-content>
