--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,8 +7,10 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-    <div class="container" style="margin: auto; padding: auto;">
-      <h2>Dakoata Tyson</h2>
-      <h3>ID: 0910240</h3>
-    </div>
+  <ion-card>
+    <ion-card-content>
+      <ion-card-title>Dakoata Tyson</ion-card-title>
+      <ion-card-subtitle>0910240</ion-card-subtitle>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
