--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,22 +8,114 @@
 
 <ion-content [fullscreen]="true">
   <ion-list>
-  <ion-item-sliding>
-    <ion-item>
-      <ion-label>Bread</ion-label>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="remove(item)"><ion-icon name="trash-sharp" size="large"></ion-icon></ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <div class="grocery-item">Bread</div>
+            </ion-col>
+            <ion-col>
+              <div class="grocery-quantity">2</div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
 
-  <ion-item-sliding>
-    <ion-item>
-      <ion-label>Milk</ion-label>
-    </ion-item>
-    <ion-item-options side="end">
-      <ion-item-option (click)="remove(item)"><ion-icon name="trash-sharp" size="large"></ion-icon></ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-</ion-list>
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove(item)" color="danger">
+          <ion-icon name="trash-sharp" size="large"></ion-icon>
+          DELETE
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+    <ion-item-sliding>
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <div class="grocery-item">Milk</div>
+            </ion-col>
+            <ion-col>
+              <div class="grocery-item">1</div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove(item)" color="danger">
+          <ion-icon name="trash-sharp" size="large"></ion-icon>
+          DELETE
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+    <ion-item-sliding>
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <div class="grocery-item">Butter Tub</div>
+            </ion-col>
+            <ion-col>
+              <div class="grocery-item">1</div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove(item)" color="danger">
+          <ion-icon name="trash-sharp" size="large"></ion-icon>
+          DELETE
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+    <ion-item-sliding>
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <div class="grocery-item">Tomatos</div>
+            </ion-col>
+            <ion-col>
+              <div class="grocery-item">4</div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove(item)" color="danger">
+          <ion-icon name="trash-sharp" size="large"></ion-icon>
+          DELETE
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+    <ion-item-sliding>
+      <ion-item>
+        <ion-grid>
+          <ion-row>
+            <ion-col>
+              <div class="grocery-item">Onion</div>
+            </ion-col>
+            <ion-col>
+              <div class="grocery-item">3</div>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove(item)" color="danger">
+          <ion-icon name="trash-sharp" size="large"></ion-icon>
+          DELETE
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
