--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h3 class="ion-text-center" *ngIf="loadItems().length === 0">No Grocery Items.....</h3>
+  <h3 class="ion-text-center" *ngIf="noItems()">No Grocery Items.....</h3>
 
   <ion-list>
     <ion-item-sliding *ngFor="let item of loadItems() let i = index">
